Add new project

--- a/index.html
+++ b/index.html
@@ -282,7 +282,13 @@
       <div class="row justify-content-center">
         <h2 data-translate-id="projects-header"></h2>
       </div>
-      <div class="row projects-row">
+      <div class="row projects-row justify-content-center">
+        <div class="col-md-4">
+          <div class="project-container">
+            <div class="image-container"><a href="//play.magicofgods.ru/" target="_blank"><img src="./img/play.magicofgods.jpg" class="img-fluid"/></a></div>
+            <p data-translate-id="project-magicofgods" class="title"></p>
+          </div>
+        </div>
         <div class="col-md-4">
           <div class="project-container">
             <div class="image-container"><a href="//powerslime.github.io/template_mihaela_dreglea_art/" target="_blank"><img src="./img/artist_template.jpg" class="img-fluid"/></a></div>
