Update skills and projects

--- a/index.html
+++ b/index.html
@@ -133,6 +133,32 @@
                   </td>
                 </tr>
                 <tr>
+                  <td class="skill">JavaScript (ES5/ES6)</td>
+                  <td class="rating-row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="skill">React</td>
+                  <td class="rating-row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+              </table>
+              <table class="skills-table">
+                <tr>
                   <td class="skill">HTML/CSS</td>
                   <td class="rating-row">
                     <ul class="rating-list">
@@ -151,7 +177,7 @@
                       <li class="rating active"></li>
                       <li class="rating active"></li>
                       <li class="rating active"></li>
-                      <li class="rating"></li>
+                      <li class="rating active"></li>
                       <li class="rating"></li>
                     </ul>
                   </td>
@@ -168,34 +194,10 @@
                     </ul>
                   </td>
                 </tr>
-                <tr>
-                  <td class="skill">JavaScript</td>
-                  <td class="rating-row">
-                    <ul class="rating-list">
-                      <li class="rating active"></li>
-                      <li class="rating active"></li>
-                      <li class="rating"></li>
-                      <li class="rating"></li>
-                      <li class="rating"></li>
-                    </ul>
-                  </td>
-                </tr>
               </table>
               <table class="skills-table">
                 <tr>
-                  <td class="skill">Git</td>
-                  <td class="rating-row">
-                    <ul class="rating-list">
-                      <li class="rating active"></li>
-                      <li class="rating active"></li>
-                      <li class="rating active"></li>
-                      <li class="rating"></li>
-                      <li class="rating"></li>
-                    </ul>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="skill">Jade</td>
+                  <td class="skill">Jade (Pug)</td>
                   <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
@@ -220,6 +222,18 @@
                 </tr>
               </table>
               <table class="skills-table">
+                <tr>
+                  <td class="skill">Git</td>
+                  <td class="rating-row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
                 <tr>
                   <td class="skill">StackOverflow</td>
                   <td class="rating-row">
@@ -283,6 +297,12 @@
         <h2 data-translate-id="projects-header"></h2>
       </div>
       <div class="row projects-row justify-content-center">
+        <div class="col-md-4">
+          <div class="project-container">
+            <div class="image-container"><a href="//powerslime.github.io/deer/" target="_blank"><img src="./img/DeerIO.jpg" class="img-fluid"/></a></div>
+            <p data-translate-id="project-deerio" class="title"></p>
+          </div>
+        </div>
         <div class="col-md-4">
           <div class="project-container">
             <div class="image-container"><a href="//play.magicofgods.ru/" target="_blank"><img src="./img/play.magicofgods.jpg" class="img-fluid"/></a></div>
