Add deerio api to projects

--- a/index.html
+++ b/index.html
@@ -299,6 +299,12 @@
       <div class="row projects-row justify-content-center">
         <div class="col-md-4">
           <div class="project-container">
+            <div class="image-container"><a href="//github.com/PowerSlime/python-deer-io-api" target="_blank"><img src="./img/PyDeerIO.jpg" class="img-fluid"/></a></div>
+            <p data-translate-id="project-python-deerio" class="title"></p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="project-container">
             <div class="image-container"><a href="//powerslime.github.io/deer/" target="_blank"><img src="./img/DeerIO.jpg" class="img-fluid"/></a></div>
             <p data-translate-id="project-deerio" class="title"></p>
           </div>
