Update homepage info

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
               <div class="col">
                 <article>
                   <ul class="school">
-                    <li class="date">01/09/2015</li>
+                    <li class="date">09/2015 - 06/2019</li>
                     <li class="name">Colegiul Politehnic</li>
                     <li class="place">Balti, Moldova</li>
                   </ul>
                   <ul class="school">
-                    <li class="date">01/09/2006 - 31/05/2015</li>
+                    <li class="date">09/2006 - 05/2015</li>
                     <li class="name">Liceum A. S. Puskin</li>
                     <li class="place">Falesti, Moldova</li>
                   </ul>
@@ -121,25 +121,13 @@
             <div class="col-md-12">
               <table class="skills-table">
                 <tr>
-                  <td class="skill">Python</td>
-                  <td class="rating-row">
-                    <ul class="rating-list">
-                      <li class="rating active"></li>
-                      <li class="rating active"></li>
-                      <li class="rating active"></li>
-                      <li class="rating"></li>
-                      <li class="rating"></li>
-                    </ul>
-                  </td>
-                </tr>
-                <tr>
                   <td class="skill">JavaScript (ES5/ES6)</td>
                   <td class="rating-row">
                     <ul class="rating-list">
                       <li class="rating active"></li>
                       <li class="rating active"></li>
                       <li class="rating active"></li>
-                      <li class="rating"></li>
+                      <li class="rating active"></li>
                       <li class="rating"></li>
                     </ul>
                   </td>
@@ -151,6 +139,18 @@
                       <li class="rating active"></li>
                       <li class="rating active"></li>
                       <li class="rating"></li>
+                      <li class="rating"></li>
+                      <li class="rating"></li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="skill">Python</td>
+                  <td class="rating-row">
+                    <ul class="rating-list">
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
+                      <li class="rating active"></li>
                       <li class="rating"></li>
                       <li class="rating"></li>
                     </ul>
@@ -189,7 +189,7 @@
                       <li class="rating active"></li>
                       <li class="rating active"></li>
                       <li class="rating active"></li>
-                      <li class="rating"></li>
+                      <li class="rating active"></li>
                       <li class="rating"></li>
                     </ul>
                   </td>
@@ -215,7 +215,7 @@
                       <li class="rating active"></li>
                       <li class="rating active"></li>
                       <li class="rating active"></li>
-                      <li class="rating"></li>
+                      <li class="rating active"></li>
                       <li class="rating"></li>
                     </ul>
                   </td>
@@ -229,7 +229,7 @@
                       <li class="rating active"></li>
                       <li class="rating active"></li>
                       <li class="rating active"></li>
-                      <li class="rating"></li>
+                      <li class="rating active"></li>
                       <li class="rating"></li>
                     </ul>
                   </td>
